# IntersectionTests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  timing_data
include/: fixtures.hpp  fixtures.ipp  intersectors.hpp  intersectors.ipp  types.hpp
scripts/: run_all.sh  run_benchmarks.sh
src/: CMakeLists.txt  EigenBenchmark.cpp  EigenBenchmark_wres.cpp  IntersectionBenchmark.cpp  IntersectionTests.cpp  VcHorizBenchmark.cpp  VcHorizBenchmark_wres.cpp  VcHybridBenchmark.cpp  VcHybridBenchmark_wres.cpp  VcVertBenchmark.cpp  VcVertBenchmark_wres.cpp
visualization/: plot_benchmarks.py  plot_comparision.py
